# tutee

./: README.md  app.py  pyproject.toml
.github/: dependabot.yml
.streamlit/: config.toml
tutee/: app.py  gpt.py  🧑‍✈️_Tutee.py
tutee/pages/: eli5.py  ✍️_Essay_outline.py  📝_Study_notes.py  🤷_Explain_Like_I'm_5.py
